--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Consulta Online <span>Eleições</span> <b>gerais</b> <dt>brasileiras</dt> </h1>
         <hr>
         <div class="imagem">
-            <img src="img/abc.jpg">
+            <img src="abc.jpg">
         </div>
         <form class="group-form">
             <label>Nome ou numéro do candidato</label>
@@ -22,8 +22,8 @@
             <input type="submit" value="BUSCAR">
         </form>
         <div id="imgCandidatos">
-            <img src="img/lulinha.png" width="100px">
-            <img src="img/13.png" width="100px">
+            <img src="lulinha.png" width="100px">
+            <img src="13.png" width="100px">
         </div>
 <div id="content">
     ...
