--- a/index.html
+++ b/index.html
@@ -7,27 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Darlan</title>
     <link rel="stylesheet" href="style.css">
+    <a href=" class=" link"></a>
 </head>
 
 <body>
     <div class="container">
-        <h1>Consulta Online <span>Eleições</span> <b>gerais</b> <dt>brasileiras</dt> </h1>
+        <h1>Consulta Online <span>Eleições</span> <b>gerais</b>
+            <dt>brasileiras</dt>
+        </h1>
         <hr>
         <div class="imagem">
-            <img src="abc.jpg">
+            <img src="img/abc.jpg">
         </div>
         <form class="group-form">
-            <label>Nome ou numéro do candidato</label>
+            <label>Nome ou numéro do cadidato</label>
             <input type="text" id="name" placeholder="Exemplo Lula ou 13" required>
-            <input type="submit" value="BUSCAR">
+            <button class="butao" type="button"> <a href="img/lv_0_20221002223050.mp4" target="_parent">BUSCAR</a>
+            </button>
         </form>
         <div id="imgCandidatos">
-            <img src="lulinha.png" width="100px">
-            <img src="13.png" width="100px">
+            <img src="img/lulinha.png" width="100px">
+            <img src="img/13.png" width="100px">
         </div>
-<div id="content">
-    ...
-</div>
+        <div id="content">
+            ...
+        </div>
+
     </div>
     <script src="script.js"> </script>
 
