--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         </h1>
         <hr>
         <div class="imagem">
-            <img src="img/abc.jpg">
+            <img src="abc.jpg">
         </div>
         <form class="group-form">
             <label>Nome ou numéro do cadidato</label>
             <input type="text" id="name" placeholder="Exemplo Lula ou 13" required>
-            <button class="butao" type="button"> <a href="img/lv_0_20221002223050.mp4" target="_parent">BUSCAR</a>
+            <button class="butao" type="button"> <a href="lv_0_20221002223050.mp4" target="_parent">BUSCAR</a>
             </button>
         </form>
         <div id="imgCandidatos">
-            <img src="img/lulinha.png" width="100px">
-            <img src="img/13.png" width="100px">
+            <img src="lulinha.png" width="100px">
+            <img src="13.png" width="100px">
         </div>
         <div id="content">
             ...
