--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="abc.jpg">
         </div>
         <form class="group-form">
-            <label>Nome ou numéro do cadidato</label>
+            <label>Nome ou numéro do candidato</label>
             <input type="text" id="name" placeholder="Exemplo Lula ou 13" required>
             <button class="butao" type="button"> <a href="lv_0_20221002223050.mp4" target="_parent">BUSCAR</a>
             </button>
